--- a/NotesApp/Views/AboutPage.xaml
+++ b/NotesApp/Views/AboutPage.xaml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModels="clr-namespace:NotesApp.ViewModels"
-             x:Class="NotesApp.Views.AboutPage">
-    <ContentPage.BindingContext>
-        <viewModels:AboutViewModel />
-    </ContentPage.BindingContext>
+             xmlns:viewModels="clr-namespace:NotesApp.ViewModels;assembly=NotesApp.ViewModels"
+             x:Class="NotesApp.Views.AboutPage"
+             x:DataType="viewModels:AboutViewModel">
     <VerticalStackLayout Spacing="10" Margin="10">
         <HorizontalStackLayout Spacing="10">
             <Image Source="dotnet_bot.png"
