--- a/NotesApp/Views/AllNotesPage.xaml
+++ b/NotesApp/Views/AllNotesPage.xaml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModels="clr-namespace:NotesApp.ViewModels"
+             xmlns:viewModels="clr-namespace:NotesApp.ViewModels;assembly=NotesApp.ViewModels"
+             xmlns:models="clr-namespace:NotesApp.Models;assembly=NotesApp.Persistence"
              x:Class="NotesApp.Views.AllNotesPage"
+             x:DataType="viewModels:NotesViewModel"
              Title="Your Notes"
-             NavigatedTo="ContentPage_NavigatedTo"
-             Appearing="ContentPage_Appearing">
-    <ContentPage.BindingContext>
-        <viewModels:NotesViewModel />
-    </ContentPage.BindingContext>
-    
+             NavigatedTo="ContentPage_NavigatedTo">
     <!-- Add an item to the toolbar -->
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding NewCommand}" IconImageSource="{FontImage Glyph='+', Color=White, Size=22}" />
@@ -29,7 +26,7 @@
         
         <!-- Define the appareance of each item in the list -->
         <CollectionView.ItemTemplate>
-            <DataTemplate>
+            <DataTemplate x:DataType="models:Note">
                 <StackLayout>
                     <Label Text="{Binding Text}" FontSize="22" />
                     <Label Text="{Binding Date}" FontSize="14" TextColor="Silver" />
