--- a/NotesApp/Views/UpdateNotePage.xaml
+++ b/NotesApp/Views/UpdateNotePage.xaml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModels="clr-namespace:NotesApp.ViewModels"
-             x:Class="NotesApp.Views.NotePage"
-             Title="Note">
-    <ContentPage.BindingContext>
-        <viewModels:NoteViewModel />
-    </ContentPage.BindingContext>
+             xmlns:viewModels="clr-namespace:NotesApp.ViewModels;assembly=NotesApp.ViewModels"
+             x:Class="NotesApp.Views.UpdateNotePage"
+             x:DataType="viewModels:UpdateNoteViewModel"
+             Title="Update Note">
     <VerticalStackLayout Spacing="10" Margin="5">
         <Editor x:Name="TextEditor"
                 Placeholder="Enter your note"
