NotesViewModel unit tests

--- a/NotesApp/Views/AllNotesPage.xaml
+++ b/NotesApp/Views/AllNotesPage.xaml
@@ -9,7 +9,7 @@
              NavigatedTo="ContentPage_NavigatedTo">
     <!-- Add an item to the toolbar -->
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Command="{Binding NewCommand}" IconImageSource="{FontImage Glyph='+', Color=White, Size=22}" />
+        <ToolbarItem Text="Add" Command="{Binding NewNoteCommand}" IconImageSource="{FontImage Glyph='+', Color=White, Size=22}" />
     </ContentPage.ToolbarItems>
 
     <!-- Display notes in a list -->
